--- a/index.html
+++ b/index.html
@@ -39,19 +39,7 @@
       <div class="container">
         <div class="row">
           <div class="col-xl-9 mx-auto">
-            <h1 class="mb-5">Build a landing page for your business or project and generate more leads!</h1>
-          </div>
-          <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
-            <form>
-              <div class="form-row">
-                <div class="col-12 col-md-9 mb-2 mb-md-0">
-                  <input type="email" class="form-control form-control-lg" placeholder="Enter your email...">
-                </div>
-                <div class="col-12 col-md-3">
-                  <button type="submit" class="btn btn-block btn-lg btn-primary">Sign up!</button>
-                </div>
-              </div>
-            </form>
+            <h1 class="mb-5">Welcome to the Toxin Discord Website!</h1>
           </div>
         </div>
       </div>
@@ -66,8 +54,8 @@
               <div class="features-icons-icon d-flex">
                 <i class="icon-screen-desktop m-auto text-primary"></i>
               </div>
-              <h3>Fully Responsive</h3>
-              <p class="lead mb-0">This theme will look great on any device, no matter the size!</p>
+              <h3>Accessable on Any Device</h3>
+              <p class="lead mb-0">Our website, forum, wiki, and development sites are all mobile and computer friendly.</p>
             </div>
           </div>
           <div class="col-lg-4">
@@ -75,8 +63,8 @@
               <div class="features-icons-icon d-flex">
                 <i class="icon-layers m-auto text-primary"></i>
               </div>
-              <h3>Bootstrap 4 Ready</h3>
-              <p class="lead mb-0">Featuring the latest build of the new Bootstrap 4 framework!</p>
+              <h3>Stuff for Everyone</h3>
+              <p class="lead mb-0">Looking to help the <a href url="http://wiki.toxin.ga">wiki?</a> Want to chat with others? The <a href url="http://forum.toxin.ga">forum.</a></p>
             </div>
           </div>
           <div class="col-lg-4">
@@ -84,8 +72,8 @@
               <div class="features-icons-icon d-flex">
                 <i class="icon-check m-auto text-primary"></i>
               </div>
-              <h3>Easy to Use</h3>
-              <p class="lead mb-0">Ready to use with your own content, or customize the source files!</p>
+              <h3>Safe</h3>
+              <p class="lead mb-0">Our website is safe and has no malware. <strong>Coming Soon.</strong></p>
             </div>
           </div>
         </div>
@@ -99,28 +87,28 @@
 
           <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-1.jpg');"></div>
           <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-            <h2>Fully Responsive Design</h2>
-            <p class="lead mb-0">When you use a theme created by Start Bootstrap, you know that the theme will look great on any device, whether it's a phone, tablet, or desktop the page will behave responsively!</p>
+            <h2>Minecraft</h2>
+            <p class="lead mb-0">We have our own section of the forum dedicated to Minecraft. This section has different servers, mod showcases, and build showcases. <strong>Link coming soon.</strong></p>
           </div>
         </div>
         <div class="row no-gutters">
           <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/bg-showcase-2.jpg');"></div>
           <div class="col-lg-6 my-auto showcase-text">
-            <h2>Updated For Bootstrap 4</h2>
-            <p class="lead mb-0">Newly improved, and full of great utility classes, Bootstrap 4 is leading the way in mobile responsive web development! All of the themes on Start Bootstrap are now using Bootstrap 4!</p>
+            <h2>Coding</h2>
+            <p class="lead mb-0">We also have a coding section dedicated to the forum. Here you can share your program and website code. You can also help others with their code to help improve and clean up their code.</p>
           </div>
         </div>
         <div class="row no-gutters">
           <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-3.jpg');"></div>
           <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-            <h2>Easy to Use &amp; Customize</h2>
-            <p class="lead mb-0">Landing Page is just HTML and CSS with a splash of SCSS for users who demand some deeper customization options. Out of the box, just add your content and images, and your new landing page will be ready to go!</p>
+            <h2>Constantly Growing</h2>
+            <p class="lead mb-0">Our discord & forum are both constantly growing. Join now! <br><br><iframe src="https://discordapp.com/widget?id=416494582088335370&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"></iframe></p>
           </div>
         </div>
       </div>
     </section>
 
-    <!-- Testimonials -->
+    <!--
     <section class="testimonials text-center bg-light">
       <div class="container">
         <h2 class="mb-5">What people are saying...</h2>
@@ -148,7 +136,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- Call to Action -->
     <section class="call-to-action text-white text-center">
@@ -156,19 +144,10 @@
       <div class="container">
         <div class="row">
           <div class="col-xl-9 mx-auto">
-            <h2 class="mb-4">Ready to get started? Sign up now!</h2>
+            <h2 class="mb-4">Ready to get started? Check out our links</h2>
+			<h2> Forum: <a href url="http://forum.toxin.ga">http://forum.toxin.ga</a><br>Wiki: <a href url="http://wiki.toxin.ga">http://wiki.toxin.ga</a><br>Development Blog: <a href url="http://development.toxin.ga">http://development.toxin.ga</a>
           </div>
           <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
-            <form>
-              <div class="form-row">
-                <div class="col-12 col-md-9 mb-2 mb-md-0">
-                  <input type="email" class="form-control form-control-lg" placeholder="Enter your email...">
-                </div>
-                <div class="col-12 col-md-3">
-                  <button type="submit" class="btn btn-block btn-lg btn-primary">Sign up!</button>
-                </div>
-              </div>
-            </form>
           </div>
         </div>
       </div>
@@ -196,7 +175,7 @@
                 <a href="#">Privacy Policy</a>
               </li>
             </ul>
-            <p class="text-muted small mb-4 mb-lg-0">&copy; Your Website 2018. All Rights Reserved.</p>
+            <p class="text-muted small mb-4 mb-lg-0">&copy; Toxin/@Anime Cat 👑🐱#0001  2018. All Rights Reserved.</p>
           </div>
           <div class="col-lg-6 h-100 text-center text-lg-right my-auto">
             <ul class="list-inline mb-0">
