--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
     <!-- Navigation -->
     <nav class="navbar navbar-light bg-light static-top">
       <div class="container">
-        <a class="navbar-brand" href="#">Start Bootstrap</a>
-        <a class="btn btn-primary" href="#">Sign In</a>
+        <a class="navbar-brand" href="#">Toxin Discord</a>
+        <a href class="btn btn-primary" url="http://forum.toxin.ga/index.php">Forum</a>
+	      <a href class="btn btn-primary" url="http://wiki.toxin.ga/">Wiki</a>
+	      <a href class="btn btn-primary" url="http://development.toxin.ga/">Development</a>
       </div>
     </nav>
 
